[refactor] Separate Subject from classification domain and update DB schema